--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1431,6 +1431,12 @@ input, select, textarea {
 		color: #009ca3;
 	}
 
+	span.pseudolink:hover {
+		color: #101820;
+		font-size: 1.3rem;
+		transition: .3s;
+	}
+
 	.gallery {
 		display: -moz-flex;
 		display: -webkit-flex;
